# Vietnamese-Legal-Question-Answering-System

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.json  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  phase7_processed_chunk_validation_plan.md  pyproject.toml
.agents/skills/: README.md  SKILL_INDEX.md
.claude/: setting.json  settings.example.json  settings.local.json
.codex/context/: CLAUDE_MIRROR.md  INSTRUCTION_INDEX.md  PROJECT_CONTEXT.md
.github/workflows/: backend-container.yml  ci.yml  deploy-production-container.yml  deploy-production.yml  deploy-staging.yml  frontend-ci.yml  production-ask-smoke.yml  protected-paths.yml  secret-scan.yml  staging-ask-smoke.yml
apps/frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
config/: chunking.yml  retrieval.yml
config/laws/: corpus_registry.yml
configs/evaluation/: legal_qa_benchmark.yml
configs/indexing/: embedding_indexing.yml
configs/llm/: openrouter.yml
configs/processing/: processed_jsonl_validation.yml
configs/retrieval/: quality_gate.yml  retrieval.yml
data/eval/: manual_faithfulness_verdicts.json  manual_naive_rag_generation_queries.jsonl  manual_retrieval_queries.jsonl
deploy/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: advanced_rag.md  api_deployment.md  backend-runtime.md  benchmark_architecture_audit.md  ci_cd.md  cleaning_normalization.md  corpus_registry.md  crawling.md  embedding_indexing.md  end_to_end_pipeline.md  evaluation.md  evaluation_metric_refresh_plan.md  evaluation_protocol.md  graphrag_agents.md  legal_parsing.md  legal_qa_benchmark.md  mlops_maintenance.md  naive_rag.md  parent_child_chunking.md  phase10_tracer.md  phase5_legal_hierarchy_parsing_plan.md  phase6_parent_child_chunking_plan.md  phase7_processed_chunk_validation_plan.md  phase7_warning_examples_audit.md  phase7_warning_resolution_policy.md  phase8_embedding_indexing_tracker.md  phase9_retrieval_naive_rag_tracker.md  phase9d_manual_faithfulness_review.md  processed_jsonl.md  project_phase_journal.md  project_setup.md  raw_corpus_audit.md  raw_data_crawling.md  retrieval_quality_generalization_audit.md
docs/runbooks/: azure_deployment.md
docs/templates/: naive_rag_manual_faithfulness_review.md
scripts/: audit_cleaning_quality.py  audit_raw_corpus.py  chunk_legal_corpus.py  clean_raw_corpus.py  crawl_raw_corpus.py  evaluate_dense_retrieval.py  evaluate_naive_rag_generation.py  export_naive_rag_manual_review.py  index_qdrant_chunks.py  parse_legal_hierarchy.py  pilot_bge_m3_embeddings.py  run_dense_retrieval.py  run_naive_rag.py  run_selection_smoke.py  setup_qdrant_collection.py  validate_processed_jsonl.py  validate_qdrant_index.py
scripts/corpus/: audit_cleaning_quality.py  audit_raw_corpus.py  chunk_legal_corpus.py  clean_raw_corpus.py  crawl_raw_corpus.py  parse_legal_hierarchy.py  validate_processed_jsonl.py
scripts/database/: postgres_conversation_store.sql  smoke_postgres_conversation_store.py
scripts/deployment/: fetch_processed_chunks.py  repeated_production_ask_smoke.py  validate_production_ask_smoke_response.py
scripts/evaluation/: analyze_evidence_selection_diagnostics.py  analyze_strict_generation_errors.py  create_benchmark_split.py  freeze_benchmark.py  run_coverage_aware_hybrid_retrieval.py  run_frozen_generation_baseline.py  run_frozen_hybrid_retrieval_baseline.py  run_frozen_retrieval_baseline.py  run_frozen_sparse_retrieval_baseline.py  run_fusion_ablation.py  run_local_hybrid_retrieval_validation.py  run_reranked_retrieval.py  run_reranking_ablation.py  run_retrieval_quality_generalization_benchmark.py  run_strict_generation_evaluation.py  validate_benchmark.py
scripts/indexing/: index_qdrant_chunks.py  pilot_bge_m3_embeddings.py  setup_qdrant_collection.py  validate_qdrant_index.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+435 files in other folders)
