[project]
name = "vnlaw-qa"
version = "0.1.0"
description = "Vietnamese Legal Question Answering System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",

    # Crawl & Parse
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tenacity>=8.2",

    # Embedding
    "FlagEmbedding>=1.2",

    # Vector DB
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML",
    "types-beautifulsoup4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Ruff — Linter & Formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP017",  # datetime.UTC alias (requires Python 3.11+)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================================
# Mypy — Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
