[project]
name = "vnlaw-qa"
version = "0.1.0"
description = "Vietnamese legal question-answering system with Naive RAG → Advanced RAG → GraphRAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VnLaw-QA Team" }]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "respx[dev]>=0.23.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
]

[project.scripts]
vnlaw-crawl = "src.ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4"]
ignore = ["B008", "E501"]

# Mypy is disabled due to hatchling build structure issues
# Run manually with: uv run mypy --explicit-package-bases src/ingestion src/core

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
# Note: mypy has issues with hatchling structure. Use: uv run mypy --explicit-package-bases src/ingestion src/core
# Ignore missing yaml stubs
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
